add route for single scr via XML

--- a/package.json
+++ b/package.json
@@ -18,15 +18,19 @@
   "dependencies": {
     "@types/express": "^4.17.6",
     "@types/node": "^13.13.12",
+    "@types/osmtogeojson": "^2.2.29",
     "@types/request-promise": "^4.1.46",
+    "@types/xmldom": "^0.1.30",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
+    "osmtogeojson": "^3.0.0-beta.4",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
     "swagger-ui-express": "^4.1.4",
-    "typescript": "3.3.3333"
+    "typescript": "3.3.3333",
+    "xmldom": "^0.3.0"
   },
   "devDependencies": {
     "concurrently": "^2.2.0",
