--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
+    "geojsontoosm": "0.0.3",
     "osmtogeojson": "^3.0.0-beta.4",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
