--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
-    "geojsontoosm": "0.0.3",
     "osmtogeojson": "^3.0.0-beta.4",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
@@ -35,6 +34,7 @@
   },
   "devDependencies": {
     "concurrently": "^2.2.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "prettier": "2.0.5"
   }
 }
