--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/request-promise": "^4.1.46",
     "@types/xmldom": "^0.1.30",
     "body-parser": "^1.18.3",
+    "class-validator": "^0.12.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
