--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "outDir": "dist",
+    "experimentalDecorators": true,
   },
   "files": [
     "./node_modules/@types/node/index.d.ts"
