--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.6",
+    "@types/express-jwt": "0.0.42",
     "@types/node": "^13.13.12",
     "@types/request-promise": "^4.1.46",
     "body-parser": "^1.18.3",
@@ -24,6 +25,9 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
+    "express-jwt": "^6.0.0",
+    "express-jwt-authz": "^2.4.1",
+    "jwks-rsa": "^1.8.1",
     "kappa-core": "^6.0.0",
     "kappa-osm": "^4.0.3",
     "memdb": "^1.3.1",
