--- a/package.json
+++ b/package.json
@@ -21,16 +21,19 @@
     "@types/node": "^13.13.12",
     "@types/request-promise": "^4.1.46",
     "body-parser": "^1.18.3",
+    "chalk": "^4.1.0",
     "class-validator": "^0.12.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "express-jwt": "^6.0.0",
     "express-jwt-authz": "^2.4.1",
+    "hyperswarm": "^2.15.0",
     "jwks-rsa": "^1.8.1",
     "kappa-core": "^6.0.0",
     "kappa-osm": "^4.0.3",
     "memdb": "^1.3.1",
+    "pump": "^3.0.0",
     "random-access-memory": "^3.1.1",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
