--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "James Jackson",
   "license": "ISC",
   "dependencies": {
+    "@turf/turf": "^5.1.6",
     "body-parser": "^1.18.3",
     "class-validator": "^0.12.2",
     "cors": "^2.8.5",
@@ -23,6 +24,7 @@
     "express": "^4.16.4",
     "express-jwt": "^6.0.0",
     "express-jwt-authz": "^2.4.1",
+    "h3-js": "^3.6.4",
     "helmet": "^3.23.3",
     "hyperswarm": "^2.15.0",
     "jwks-rsa": "^1.8.1",
