--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@turf/turf": "^5.1.6",
     "body-parser": "^1.18.3",
+    "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -33,6 +34,7 @@
     "memdb": "^1.3.1",
     "pump": "^3.0.0",
     "random-access-memory": "^3.1.1",
+    "reflect-metadata": "^0.1.13",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
     "swagger-ui-express": "^4.1.4"
