--- a/package.json
+++ b/package.json
@@ -16,39 +16,39 @@
   "author": "James Jackson",
   "license": "ISC",
   "dependencies": {
-    "@placekey/placekey": "^1.0.1",
+    "@placekey/placekey": "^1.0.3",
     "@turf/turf": "^5.1.6",
-    "body-parser": "^1.18.3",
-    "class-transformer": "^0.3.1",
-    "class-validator": "^0.12.2",
+    "body-parser": "^1.19.0",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.16.4",
+    "dotenv": "^8.4.0",
+    "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "express-jwt-authz": "^2.4.1",
-    "h3-js": "^3.6.4",
-    "helmet": "^3.23.3",
-    "hyperswarm": "^2.15.0",
-    "jwks-rsa": "^1.8.1",
-    "kappa-core": "^6.0.0",
-    "kappa-osm": "^4.0.3",
+    "h3-js": "^3.7.2",
+    "helmet": "^4.6.0",
+    "hyperswarm": "^2.15.3",
+    "jwks-rsa": "^2.0.3",
+    "kappa-core": "^7.0.0",
+    "kappa-osm": "^4.1.0",
     "memdb": "^1.3.1",
     "pump": "^3.0.0",
-    "random-access-memory": "^3.1.1",
+    "random-access-memory": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.2",
-    "request-promise": "^4.2.5",
-    "swagger-ui-express": "^4.1.4"
+    "request-promise": "^4.2.6",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
-    "@types/express": "^4.17.6",
-    "@types/express-jwt": "0.0.42",
-    "@types/helmet": "0.0.47",
-    "@types/node": "^13.13.12",
-    "@types/request-promise": "^4.1.46",
-    "typescript": "3.3.3333",
-    "concurrently": "^2.2.0",
-    "nodemon": "^2.0.4",
-    "prettier": "2.0.5"
+    "@types/express": "^4.17.11",
+    "@types/express-jwt": "6.0.1",
+    "@types/helmet": "0.0.48",
+    "@types/node": "^15.0.2",
+    "@types/request-promise": "^4.1.47",
+    "concurrently": "^6.0.2",
+    "nodemon": "^2.0.7",
+    "prettier": "2.2.1",
+    "typescript": "4.2.4"
   }
 }
